# compiledhackathon

./: .gitignore  PROJECT_MEMORY.md  README.md  package-lock.json  package.json
apps/api/: README.md  pyproject.toml
apps/api/src/fraudcopilot/: __init__.py  app.py  reference_ingest.py
apps/api/tests/: test_api_flow.py  test_reference_fixtures.py
apps/web/: package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/src/__tests__/: evidence-graph-visual.test.tsx  workspace-shell.test.tsx
apps/web/src/components/: case-workspace.tsx  evidence-graph-visual.tsx
data/demo/: clean_case.json  specialty_mismatch_case.json  suspicious_case.json
data/demo/evidence_files/: README.md  billing-company-email.txt  exhibit-index.md  internal-billing-note.txt  paste-suspicious-network-bundle.txt  upload-clean-control-claims.csv  upload-specialty-mismatch-claims.csv  upload-suspicious-network-claims.csv  whistleblower-tip.txt
data/reference/: cms_benchmarks.json  leie.json  npi_registry.json  source_manifest.json
sample-evidence/: claims-batch.tsv  claims.json  messy-claims.csv  narrative-claim-note.txt
scripts/: build_cms_benchmarks.py
storage/: fraudcopilot.db
tasks/: findings.md  progress.md  task_plan.md
