[project]
name = "fraudcopilot-api"
version = "0.1.0"
description = "Healthcare fraud investigator copilot backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "pydantic==2.11.3",
  "uvicorn==0.34.2"
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraudcopilot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
